# Search-Engine

./: .gitattributes  .gitignore  DOCUMENTATION.md  HOW_TO_RUN.md  LICENSE  Makefile  README.md  README.txt  SIMPLIFICATION_SUMMARY.txt  app.py  config.py  crawler.py  database.py  indexer.py  init.py  main.py  pagerank.py  pyproject.toml  query_expansion.py  requirements.txt  search.py  search_engine.py  setup.py  snippets.py  start.bat  start.sh
